[package]
name = "rsx_dom"
version = "0.1.0"
authors = ["Djedou <djedouarnaud.aman@gmail.com>"]

[lib]
name = "rsx_dom"

[features]
default = ["rsx-parse", "vec-arena"]
rsx-parse = ["djed_rsx_parser"]
vec-arena = ["rsx_tree/vec-arena"]
hashmap-arena = ["rsx_tree/hashmap-arena"]

[dependencies]
fnv = "1.0.6"
djed_rsx_shared = { git = "https://github.com/djedou/djed_rsx_shared.git", default-features = false }
rsx_tree = { path = "../rsx_tree", default-features = false }
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"

# Optional
djed_rsx_parser = { git = "https://github.com/djedou/djed_rsx_parser.git", default-features = false, optional = true }

[dev-dependencies]
djed_rsx_shared = { git = "https://github.com/djedou/djed_rsx_shared.git", default-features = false, features = ["impl-dummy"] }
quote = "0.3.15"
syn = { version = "0.11.11", features = ["full"] }
